# typed-argparse

./: .gitignore  404.html  CHANGES.md  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  mypy.ini  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml
css/: termynal.css
dev/: draft.md
dev/mypy_checks/: dataclass_transform.py  how_to_accept_generic_types_01.py  how_to_accept_generic_types_02.py  how_to_accept_generic_types_03.py  mypy.ini  passing_union_types.py  proper_is_dict.py
docs/: high_level_api.md  index.md  low_level_api.md
docs/css/: custom.css
examples/: commands.yaml  example.py  example_choices.py  example_sub_commands.py  example_sub_commands_draft.py  generate_console_outputs.py
examples/high_level_api/: basic_usage.console  basic_usage.py  enum_arguments.console  enum_arguments.py  option_names.console  option_names.py  positional_arguments.console  positional_arguments.py  positional_arguments_non_optional.console  positional_arguments_non_optional.py  sub_commands_basic.console  sub_commands_basic.py  sub_commands_common_arguments.console  sub_commands_common_arguments.py
examples/low_level_api/: basic_usage.py
high_level_api/: index.html
low_level_api/: index.html
scripts/: ci_all  ci_integration  generate_console_outputs  test
search/: search_index.json
tests/: _testing_utils.py  conftest.py  test_app.py  test_choices.py  test_examples.py  test_forward_reference_handling.py  test_future_annotations.py  test_parser.py  test_parser__bindings_type_checks.py  test_parser__subparsers.py  test_runtime_generic.py  test_testing_utils.py  test_type_utils.py  test_typed_argparse.py  test_typed_args.py  test_typed_args__from_argparse.py  test_with_union_type.py  testing_utils.py
typed_argparse/: __init__.py  _argparse_abstractions.py  actions.py  app.py  arg.py  choices.py  dataclass_transform_backport.py  exceptions.py  formatter.py  param.py  parser.py  runtime_generic.py  type_utils.py  typed_argparse.py  typed_args.py
