# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# https://github.com/wimglenn/resources-example/blob/master/setup.cfg

[metadata]
name = typed-argparse
version = attr: typed_argparse.VERSION
description = Write type-safe and elegant CLIs with a clear separation of concerns.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bluenote10/typed_argparse
keywords = types
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3


[options]
packages = typed_argparse
include_package_data = true
install_requires =
    setuptools
    importlib_resources


[tool:pytest]
addopts = --cov=typed_argparse --cov-report term-missing --cov-report html:.cov_html --cov-report=xml


[flake8]
max-line-length = 100
exclude = dev/mypy_checks
