# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# https://github.com/wimglenn/resources-example/blob/master/setup.cfg

[metadata]
name = typed-argparse
version = attr: typed_argparse.VERSION
description = Write type-safe and elegant CLIs with a clear separation of concerns.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://typed-argparse.github.io/typed-argparse/
keywords = types
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Source = https://github.com/typed-argparse/typed-argparse

[options]
packages = typed_argparse
include_package_data = true
install_requires =
    setuptools
    importlib_resources
python_requires = >=3.6

[tool:pytest]
addopts = --cov=typed_argparse --cov-report term-missing --cov-report html:.cov_html --cov-report=xml


[flake8]
max-line-length = 100
exclude = dev/mypy_checks
